ver 0.45 Naive Strategy done. Start creating metric

--- a/StepByStepSimulationNew/StepByStepSimulationNew/StepByStepSimulationNew.csproj
+++ b/StepByStepSimulationNew/StepByStepSimulationNew/StepByStepSimulationNew.csproj
@@ -8,7 +8,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\StrategyInterface\StrategyInterface.csproj" />
       <ProjectReference Include="..\Strategy\Strategy.csproj" />
+        <None Update="Resources\Philosophers.txt">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
