--- a/GenericHostSimulation_lab3/Model/Model.csproj
+++ b/GenericHostSimulation_lab3/Model/Model.csproj
@@ -6,4 +6,12 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0-rc.1.25451.107" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\IModel\IModel.csproj" />
+    </ItemGroup>
+
 </Project>
