ver 0.3 change structure of project, update simulation, create IServices

--- a/GenericHostSimulation_lab3/Services/Services.csproj
+++ b/GenericHostSimulation_lab3/Services/Services.csproj
@@ -6,4 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\IServices\IServices.csproj" />
+      <ProjectReference Include="..\StrategyInterface\StrategyInterface.csproj" />
+    </ItemGroup>
+
 </Project>
