--- a/GenericHostSimulation_lab3/GenericHostSimulation_lab3/GenericHostSimulation_lab3.csproj
+++ b/GenericHostSimulation_lab3/GenericHostSimulation_lab3/GenericHostSimulation_lab3.csproj
@@ -9,9 +9,13 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Model\Model.csproj" />
-      <ProjectReference Include="..\PhilosopherService\PhilosopherService.csproj" />
+      <ProjectReference Include="..\Services\Services.csproj" />
       <ProjectReference Include="..\StrategyInterface\StrategyInterface.csproj" />
       <ProjectReference Include="..\Strategy\Strategy.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0-rc.1.25451.107" />
     </ItemGroup>
 
 </Project>
