--- a/GenericHostSimulation_lab3/GenericHostSimulation_lab3/GenericHostSimulation_lab3.csproj
+++ b/GenericHostSimulation_lab3/GenericHostSimulation_lab3/GenericHostSimulation_lab3.csproj
@@ -15,6 +15,9 @@
     </ItemGroup>
 
     <ItemGroup>
+        <None Update="appsettings.json">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0-rc.1.25451.107" />
     </ItemGroup>
 
