--- a/GenericHostSimulation_lab3/GenericHostSimulation_lab3/appsettings.json
+++ b/GenericHostSimulation_lab3/GenericHostSimulation_lab3/appsettings.json
@@ -6,6 +6,7 @@
     "EatingTimeMin": 40,
     "EatingTimeMax": 50,
     "ForkAcquisitionTime": 20,
-    "DisplayUpdateInterval": 50
+    "DisplayUpdateInterval": 50,
+    "PhilosophersCount" : 5
   }
 }
