ver 0.3: Create ForkTests and NaiveStrategyTests

--- a/UnitTesting_lab4/UnitTests/UnitTests.csproj
+++ b/UnitTesting_lab4/UnitTests/UnitTests.csproj
@@ -22,4 +22,8 @@
         <Using Include="Xunit"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\UnitTesting_lab4\UnitTesting_lab4.csproj" />
+    </ItemGroup>
+
 </Project>
