ver 0.5: PhilosopherStateTests is done

--- a/UnitTesting_lab4/Services/Services.csproj
+++ b/UnitTesting_lab4/Services/Services.csproj
@@ -7,6 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+            <_Parameter1>UnitTests</_Parameter1>
+        </AssemblyAttribute>
+    </ItemGroup>
+
+    <ItemGroup>
       <ProjectReference Include="..\IServices\IServices.csproj" />
       <ProjectReference Include="..\StrategyInterface\StrategyInterface.csproj" />
     </ItemGroup>
