--- a/DataBase_lab5/Data/Data.csproj
+++ b/DataBase_lab5/Data/Data.csproj
@@ -7,14 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
-            <_Parameter1>UnitTests</_Parameter1>
-        </AssemblyAttribute>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.0" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Contract\Contract.csproj" />
-      <ProjectReference Include="..\StrategyInterface\StrategyInterface.csproj" />
+      <ProjectReference Include="..\Model\Model.csproj" />
     </ItemGroup>
 
 </Project>
