--- a/DataBase_lab5/DataBase_lab5/DataBase_lab5.csproj
+++ b/DataBase_lab5/DataBase_lab5/DataBase_lab5.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Contract\Contract.csproj" />
       <ProjectReference Include="..\Model\Model.csproj" />
       <ProjectReference Include="..\Services\Services.csproj" />
       <ProjectReference Include="..\StrategyInterface\StrategyInterface.csproj" />
