ver 0.5 Generate Migration. Add docker-compose for DB.Add scope to Observer. Update appsettings and program

--- a/DataBase_lab5/DataBase_lab5/appsettings.json
+++ b/DataBase_lab5/DataBase_lab5/appsettings.json
@@ -8,5 +8,8 @@
     "ForkAcquisitionTime": 20,
     "DisplayUpdateInterval": 50,
     "PhilosophersCount" : 5
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5435;Database=philosophers_db;Username=postgres;Password=postgres"
   }
 }
