ver 0.7 new Structure of project. Delete all "public" from Interfaces. Create createDtos. Create PhilosopherServiceBundle

--- a/DataBase_lab5/Contract/Contract.csproj
+++ b/DataBase_lab5/Contract/Contract.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Model\Model.csproj" />
+      <ProjectReference Include="..\StrategyInterface\StrategyInterface.csproj" />
     </ItemGroup>
 
 </Project>
